feat(table_topic): adapt to jdk11
Signed-off-by: Robin Han <hanxvdovehx@gmail.com>